chore(terraform): auto-applied ".github/ISSUE_TEMPLATE/bug_report.yml" [skip ci]
this file was auto-applied from the "github-common-files" module
located here:
  - https://github.com/lrstanley/.github/tree/master/terraform/github-common-files

instructions on how to tell Terraform to exclude this file:
  - https://github.com/lrstanley/.github/blob/master/example.ci-config.yml

Signed-off-by: Liam Stanley <me@liamstanley.io>

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -48,6 +48,14 @@ body:
       placeholder: 'Examples: "v1.2.3, master branch, commit 1a2b3c"'
     validations:
       required: true
+  - type: input
+    id: browser
+    attributes:
+      label: "🌐 Version: Browser"
+      description: What browser (and browser version) did this problem occur on?
+      placeholder: 'Example: "Google Chrome 99.0.4844.82"'
+    validations:
+      required: true
   - type: dropdown
     id: os
     attributes:
