chore(terraform): auto-applied ".github/dependabot.yml" [skip ci]
this file was auto-applied from the "github-common-files" module
located here:
  - https://github.com/lrstanley/.github/tree/master/terraform/github-common-files

instructions on how to tell Terraform to exclude this file:
  - https://github.com/lrstanley/.github/blob/master/example.ci-config.yml

Signed-off-by: Liam Stanley <me@liamstanley.io>

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -18,3 +18,10 @@ updates:
       timezone: "America/New_York"
       day: "monday"
       time: "12:10"
+  - package-ecosystem: npm
+    directory: "/"
+    schedule:
+      interval: weekly
+      timezone: "America/New_York"
+      day: "monday"
+      time: "12:15"
